profile img ADD

--- a/index.html
+++ b/index.html
@@ -105,14 +105,14 @@
         </div>
 
         <div class="hero-img">
-          <img src="assets/img/MD Aswed.jpg" alt="MD Aswed-portfolio" width="350" />
+          <img src="assets/img/profile.png" alt="MD Aswed-portfolio" width="350" />
         </div>
       </section>
 
       <!-- About Section  -->
       <section class="about-section" id="about">
         <div class="about-img">
-          <img src="assets/img/MD Aswed.jpg" alt="MD Aswed-portfolio" />
+          <img src="assets/img/profile.png" alt="MD Aswed-portfolio" />
         </div>
 
         <div class="about-content">
